--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
@@ -33,7 +34,7 @@
     "supertest": "^7.1.4"
   },
   "jest": {
-  "testEnvironment": "node",
-  "testTimeout": 20000
-}
+    "testEnvironment": "node",
+    "testTimeout": 20000
+  }
 }
